--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "yaml": "^2.8.0"
   },
   "devDependencies": {
-    "eslint": "^7.32.0"
+    "@eslint/js": "^9.28.0",
+    "eslint": "^7.32.0",
+    "globals": "^16.2.0"
   },
   "keywords": [
     "jpeg",
