linting improvements and code cleanup

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,8 +9,61 @@
         "sourceType": "module"
     },
     "rules": {
+        "no-console": "off",
+        "block-scoped-var": "error",
+        "brace-style": ["error", "1tbs", {"allowSingleLine": true}],
+        "camelcase": ["error", {"properties": "never"}],
+        "comma-style": ["error", "last"],
+        "comma-spacing": "error",
+        "computed-property-spacing": "error",
+        "curly": ["error", "multi-line"],
+        "dot-notation": ["error", {"allowKeywords": true}],
+        "eol-last": "warn",
+        "eqeqeq": ["error", "smart"],
+        "func-call-spacing": "error",
+        "func-name-matching": ["error", "always", {"includeCommonJSModuleExports": true}],
+        "func-style": ["error", "declaration", {"allowArrowFunctions": true}],
+        "guard-for-in": "error",
+        "indent": ["error", 4, {"SwitchCase": 1}],
+        "linebreak-style": ["error", "unix"],
+        "max-len": ["error", {"code": 120}],
+        "max-statements-per-line": ["error", {"max": 1}],
+        "no-alert": "error",
+        "no-caller": "error",
+        "no-cond-assign": ["error", "except-parens"],
+        "no-debugger": "error",
+        "no-empty": "error",
+        "no-eval": "error",
+        "no-extend-native": "error",
+        "no-extra-bind": "error",
+        "no-irregular-whitespace": "error",
+        "no-iterator": "error",
+        "no-loop-func": "error",
+        "no-multi-assign": "error",
+        "no-multi-str": "error",
+        "no-multiple-empty-lines": ["error", {"max": 2, "maxEOF": 1}],
+        "no-new": "error",
+        "no-new-func": "error",
+        "no-plusplus": "off",
+        "no-proto": "error",
+        "no-script-url": "error",
+        "no-sequences": "error",
+        "no-shadow": "error",
+        "no-tabs": "error",
+        "no-trailing-spaces": "error",
+        "no-undef": "error",
         "no-unused-vars": [
             "error", { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }
-        ] 
+        ], 
+        "no-var": "error",
+        "no-whitespace-before-property": "error",
+        "no-with": "error",
+        "prefer-const": "error",
+        "quotes": ["error", "single", "avoid-escape"],
+        "semi": ["error", "always"],
+        "strict": "error",
+        "valid-typeof": "error",
+        "wrap-iife": ["error", "inside"],
+        "prefer-promise-reject-errors": "error"
     }
 }
