--- a/tests/camera_profile.yml
+++ b/tests/camera_profile.yml
@@ -26,7 +26,7 @@ profile_metadata:
   description: content is unmodified
   expression: >
     manifests[0].claim.content_status == "assertion.dataHash.match"
-  result_text:
+  report_text:
     "true":
       en: This content has not been modified
       es: Translation in Spanish
@@ -46,9 +46,13 @@ profile_metadata:
       (manifests[0].assertions.'stds.exif'.'exif:GPSLongitude' > 80) && 
       (manifests[0].assertions.'stds.exif'.'exif:GPSLongitude' < 120)
   report_text:
-    en: The GPS information shows that the image was taken inside of China
-    fr: Translation in French
-    zh: Translation in Simplified Chinese
+    "true":
+      en: The GPS information shows that the image was taken inside of China
+      fr: Translation in French
+      zh: Translation in Simplified Chinese
+    "false":
+      en: The GPS information shows that the image was taken outside of China
+
   
 
 -   # check the human entered value for the city
@@ -60,8 +64,11 @@ profile_metadata:
                                     .'Iptc4xmpExt:City'
             , "China")
   report_text:
-    en: The city is in China
-    fr: Translation in French
-    zh: Translation in Simplified Chinese
-    jp: Translation in Japanese
-
+    "true":
+      en: The city is in China
+      fr: Translation in French
+      zh: Translation in Simplified Chinese
+      jp: Translation in Japanese
+    "false":
+      en: The city is not in China
+      
