--- a/tests/genai_profile.yml
+++ b/tests/genai_profile.yml
@@ -15,6 +15,7 @@ profile_metadata:
 # Section 1
 
 - 
+  id: generalInfo
   description: Section 1 - General Information
   title: General Information
   report_text: This section provides information about general stuff
@@ -24,7 +25,7 @@ profile_metadata:
   id: content
   description: content is unmodified
   expression: >
-      @declaration.content_status == "assertion.dataHash.match"
+      declaration.claim.content_status == "assertion.dataHash.match"
   result_text:
     "true":
       en: This content has not been modified
@@ -41,8 +42,8 @@ profile_metadata:
   id: aigc
   description: Is AIGC?
   expression: >
-    contains(declaration.assertions."c2pa.actions".actions[0].digitalSourceType, 
-              'trainedAlgorithmicMedia')
+    contains(declaration.assertions.'c2pa.actions'.actions[0].digitalSourceType, 
+              "trainedAlgorithmicMedia")
   result_text:
     "true":
       en: This media asset was produced by generative AI
@@ -54,7 +55,7 @@ profile_metadata:
 -   # See if the asset has been modified after creation
   id: declaration_only
   description: is there a declaration and no manifests present?
-  expression:  contains(keys(@), 'declaration') && !contains(keys(@), 'manifest')
+  expression:  contains(keys(@), "declaration") && !contains(keys(@), "manifest")
   result_text:
     "true":
       en: No modifications took place after it was created
@@ -65,7 +66,7 @@ profile_metadata:
 # Section 3 - Compliance
 
 - # check compliance
-  id: jpt:profile_compliance
+  id: jpt.profile_compliance
   description: is the asset compliant with this profile?
   expression: >
     @profile.aigc && @profile.declaration_only
