enabled support for the special `jpt` statements and fixed more profile errors

--- a/output/no_manifests_indicators_report.json
+++ b/output/no_manifests_indicators_report.json
@@ -19,7 +19,9 @@
         "value": false
       },
       {
-        "id": "jpt.profile_compliance"
+        "id": "jpt.profile_compliance",
+        "title": "is the asset compliant with this profile?",
+        "value": false
       }
     ]
   ]
