--- a/tests/signature_profile.yml
+++ b/tests/signature_profile.yml
@@ -22,7 +22,7 @@ profile_metadata:
 -   # check for `not_before` 
   id: not_before
   description: check the current date is after `not_before`
-  expression: datetime(signature.validity.not_before) < now()
+  expression: toDate(manifests[0].signature.validity.not_before) < now()
   result_text:
     "true":
       en: The `not_before` date is prior to right now
@@ -34,7 +34,7 @@ profile_metadata:
 -   # check for `not_after` 
   id: not_after
   description: check the current date is before `not_after`
-  expression: datetime(signature.validity.not_after) > now()
+  expression: toDate(manifests[0].signature.validity.not_after) > now()
   result_text:
     "true":
       en: The certificate is currently valid
@@ -51,12 +51,11 @@ profile_metadata:
   title: Make sure the issuer is on our Trust List
   report_text: This section checks for valid issuers
 
--   # check the issuer against known ones
-  id: issuer
-  description: see if the issuer is on our trust list
+-   # check the issuer against a known TEST cert
+  id: test_cert
+  description: see if this was signed by a test certificate
   expression: >
-    (signature.issuer.CN="Alice's Trust Services" && signature.issuer.C="US") 
-    || (signature.issuer.CN="ЦСК НБУ" && signature.issuer.C="UA")
+    manifests[0].signature.issuer.OU="FOR TESTING_ONLY" || manifests[0].signature.issuer.O="C2PA Test Intermediate Root CA"
   result_text:
     "true":
       en: The issuer is trusted
@@ -65,4 +64,34 @@ profile_metadata:
     "false":
       en: The issuer is not trusted
 
+
+-   # check the issuer against known ones
+  id: issuer
+  description: see if the issuer is on our trust list
+  expression: >
+    (manifests[0].signature.issuer.CN="Alice's Trust Services" && manifests[0].signature.issuer.C="US") 
+    || (manifests[0].signature.issuer.CN="ЦСК НБУ" && manifests[0].signature.issuer.C="UA")
+  result_text:
+    "true":
+      en: The issuer is trusted
+      fr: Translation in French
+      zh: Translation in Simplified Chinese
+    "false":
+      en: The issuer is not trusted
+
+
+---
+# Section 3 - Compliance
+
+- # check compliance
+  id: jpt.profile_compliance
+  description: is the asset signed with a trusted certificate?
+  expression: >
+    profile.not_before && profile.not_after &&
+    !profile.test_cert && profile.issuer
+  result_text:
+    "true":
+      en: This media asset is signed with a trusted certificate.
+    "false": 
+      en: This media asset is not signed with a trusted certificate.
 
