--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@adobe/json-formula": "^2.0.0-beta.1",
+    "handlebars": "^4.7.8",
     "jpeg-js": "^0.4.0",
     "jsonfile": "^6.1.0",
     "yaml": "^2.8.0"
