--- a/tests/signature_profile.yml
+++ b/tests/signature_profile.yml
@@ -89,7 +89,7 @@ profile_metadata:
   expression: >
     profile.not_before && profile.not_after &&
     !profile.test_cert && profile.issuer
-  result_text:
+  report_text:
     "true":
       en: This media asset is signed with a trusted certificate.
     "false": 
