Add support for outputting YAML reports

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,6 +21,21 @@
 		{
 			"type": "node",
 			"request": "launch",
+			"name": "Camera-Test-YAML",
+			"skipFiles": [
+				"<node_internals>/**"
+			],
+			"program": "${workspaceFolder}/src/index.js",
+			"args": [
+				"-o", "${workspaceFolder}/output",
+				"-p", "${workspaceFolder}/tests/camera_profile.yml",
+				"-y",
+				"${workspaceFolder}/tests/camera_indicators.json"
+			]
+		},
+		{
+			"type": "node",
+			"request": "launch",
 			"name": "GenAI-Test",
 			"skipFiles": [
 				"<node_internals>/**"
@@ -29,6 +44,21 @@
 			"args": [
 				"-o", "${workspaceFolder}/output",
 				"-p", "${workspaceFolder}/tests/genai_profile.yml",
+				"${workspaceFolder}/tests/genai_indicators.json"
+			]
+		},
+		{
+			"type": "node",
+			"request": "launch",
+			"name": "GenAI-Test-YAML",
+			"skipFiles": [
+				"<node_internals>/**"
+			],
+			"program": "${workspaceFolder}/src/index.js",
+			"args": [
+				"-o", "${workspaceFolder}/output",
+				"-p", "${workspaceFolder}/tests/genai_profile.yml",
+				"-y",
 				"${workspaceFolder}/tests/genai_indicators.json"
 			]
 		},
