--- a/tests/signature_profile.yml
+++ b/tests/signature_profile.yml
@@ -23,7 +23,7 @@ profile_metadata:
   id: not_before
   description: check the current date is after `not_before`
   expression: toDate(manifests[0].signature.validity.not_before) < now()
-  result_text:
+  report_text:
     "true":
       en: The `not_before` date is prior to right now
       fr: Translation in French
@@ -35,7 +35,7 @@ profile_metadata:
   id: not_after
   description: check the current date is before `not_after`
   expression: toDate(manifests[0].signature.validity.not_after) > now()
-  result_text:
+  report_text:
     "true":
       en: The certificate is currently valid
     "false":
@@ -71,7 +71,7 @@ profile_metadata:
   expression: >
     (manifests[0].signature.issuer.CN="Alice's Trust Services" && manifests[0].signature.issuer.C="US") 
     || (manifests[0].signature.issuer.CN="ЦСК НБУ" && manifests[0].signature.issuer.C="UA")
-  result_text:
+  report_text:
     "true":
       en: The issuer is trusted
       fr: Translation in French
