--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "eslint": "eslint src"
+    "eslint": "eslint src",
+    "test": "jest"
   },
   "dependencies": {
     "@adobe/json-formula": "^2.0.0-beta.1",
@@ -18,7 +19,8 @@
   "devDependencies": {
     "@eslint/js": "^9.28.0",
     "eslint": "^7.32.0",
-    "globals": "^16.2.0"
+    "globals": "^16.2.0",
+    "jest": "^30.0.2"
   },
   "keywords": [
     "jpeg",
