--- a/tests/signature_profile.yml
+++ b/tests/signature_profile.yml
@@ -56,7 +56,7 @@ profile_metadata:
   description: see if this was signed by a test certificate
   expression: >
     manifests[0].signature.issuer.OU="FOR TESTING_ONLY" || manifests[0].signature.issuer.O="C2PA Test Intermediate Root CA"
-  result_text:
+  report_text:
     "true":
       en: The issuer is trusted
       fr: Translation in French
