--- a/output/camera_indicators_report.yml
+++ b/output/camera_indicators_report.yml
@@ -6,17 +6,20 @@ metadata:
   language: en
 sections:
   - - id: generalInfo
-      title: Section 1 - General Information
+      title: General Information
       report_text: This section provides information about general stuff
     - id: content
-      title: content is unmodified
       value: true
       report_text: This content has not been modified
-  - - id: gps
-      title: GPS location approximate to China's
+    - id: declaration_only
+      value: true
+      report_text: No modifications took place after it was created
+  - - id: location
+      title: Location Information
+      report_text: This section provides information about where the image was taken
+    - id: gps
       value: true
       report_text: The GPS information shows that the image was taken inside of China
     - id: city
-      title: name of the city contains "China"
       value: true
       report_text: The city is in China
