--- a/output/genai_indicators_report.yml
+++ b/output/genai_indicators_report.yml
@@ -6,21 +6,25 @@ metadata:
   language: en
 sections:
   - - id: generalInfo
-      title: Section 1 - General Information
+      title: General Information
       report_text: This section provides information about general stuff
     - id: content
-      title: content is unmodified
       value: true
       report_text: This content has not been modified
-  - - id: aigc
-      title: Is AIGC?
+  - - id: genAI
+      title: Generative AI Usage
+      report_text: This section provides information about whether or not the media
+        asset was produced by generative AI.
+    - id: aigc
       value: true
       report_text: This media asset was produced by generative AI
     - id: declaration_only
-      title: is there a declaration and no manifests present?
       value: true
       report_text: No modifications took place after it was created
-  - - id: jpt.profile_compliance
-      title: is the asset compliant with this profile?
+  - - id: compliance
+      title: Compliance
+      report_text: This section provides the compliance status of the media asset with
+        respect to this profile.
+    - id: jpt.profile_compliance
       value: true
       report_text: This media asset is compliant with this profile.
