--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@adobe/json-formula": "^2.0.0-beta.1",
+    "commander": "^14.0.0",
     "handlebars": "^4.7.8",
     "jpeg-js": "^0.4.0",
     "jsonfile": "^6.1.0",
