--- a/output/genai_indicators_report.yml
+++ b/output/genai_indicators_report.yml
@@ -1,7 +1,7 @@
 metadata:
-  name: Experimental Generative AI Profile
+  name: Experimental Expression Registration Profile
   issuer: JPEG Trust Committee
-  date: 2023-10-31T00:16:40.346Z
+  date: 2025-06-26T21:00:46.638Z
   version: 1.0.0
   language: en
 sections:
@@ -18,13 +18,3 @@ sections:
     - id: aigc
       value: true
       report_text: This media asset was produced by generative AI
-    - id: declaration_only
-      value: true
-      report_text: No modifications took place after it was created
-  - - id: compliance
-      title: Compliance
-      report_text: This section provides the compliance status of the media asset with
-        respect to this profile.
-    - id: jpt.profile_compliance
-      value: true
-      report_text: This media asset is compliant with this profile.
