Enable support for globals

--- a/output/genai_indicators_report.yml
+++ b/output/genai_indicators_report.yml
@@ -7,7 +7,7 @@ metadata:
 sections:
   - - id: generalInfo
       title: General Information
-      report_text: This section provides information about general stuff
+      report_text: Report run on Thursday
     - id: content
       value: true
       report_text: This content has not been modified
